force-app/main/default/objects/Dan360_Interacciones__c/Dan360_Interacciones__c.object-meta.xml
<CustomObject>
    <description>Objeto para registrar las interacciones/visitas realizadas</description>
    <label>Interacción</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Interacciones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interacciones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>