force-app/main/default/objects/Dan360_Interacciones__c/fields/Accion_por_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Accion_por_cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accion por cuenta</label>
    <referenceTo>VisMed_AccionPorCuenta__c</referenceTo>
    <relationshipLabel>Interacciones</relationshipLabel>
    <relationshipName>Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>