force-app/main/default/objects/Dan360_Interacciones__c/fields/Comentario_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Comentario_de_Aprobacion__c</fullName>
    <label>Comentario de Aprobación/Rechazo</label>
    <type>TextArea</type>
</CustomField>