force-app/main/default/objects/Dan360_Interacciones__c/fields/Fecha_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Aprobacion__c</fullName>
    <label>Fecha de Aprobacion</label>
    <type>Date</type>
</CustomField>