force-app/main/default/objects/Dan360_Interacciones__c/fields/ID_App__c.field-meta.xml
<CustomField>
    <fullName>ID_App__c</fullName>
    <label>ID App</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>