force-app/main/default/objects/Dan360_Interacciones__c/fields/Interaccion__c.field-meta.xml
<CustomField>
    <fullName>Interaccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interacción</label>
    <referenceTo>Dan360_Interacciones__c</referenceTo>
    <relationshipLabel>Interacciones</relationshipLabel>
    <relationshipName>Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>