force-app/main/default/objects/Dan360_Interacciones__c/fields/Literaturas_entregadas__c.field-meta.xml
<CustomField>
    <fullName>Literaturas_entregadas__c</fullName>
    <label>Literaturas entregadas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Talonario NRS 2002</fullName>
            </value>
            <value>
                <fullName>Tarjetón importancia del soporte enteral en piso</fullName>
            </value>
            <value>
                <fullName>Tarjetón Rendimiento</fullName>
            </value>
            <value>
                <fullName>Ayuda ventas</fullName>
            </value>
            <value>
                <fullName>Díptico IDDSI</fullName>
            </value>
            <value>
                <fullName>Packs vs Polvos</fullName>
            </value>
            <value>
                <fullName>Recetas espesan clear</fullName>
            </value>
            <value>
                <fullName>Análisis costo efectividad</fullName>
            </value>
            <value>
                <fullName>Vademécum</fullName>
            </value>
            <value>
                <fullName>Cubison</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>MF6</fullName>
            </value>
            <value>
                <fullName>NPI y Protison</fullName>
            </value>
            <value>
                <fullName>Proteínas</fullName>
            </value>
            <value>
                <fullName>Tarjetón importancia del soporte enteral en el paciente internado en la terapia</fullName>
            </value>
            <value>
                <fullName>Árbol de decisión</fullName>
            </value>
            <value>
                <fullName>Video P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>