force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_APM__c.field-meta.xml
<CustomField>
    <fullName>VisMed_APM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>APM que realizo la interaccion.</description>
    <label>APM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interacciones (APM)</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>