force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Canal__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VisMed_Tipo_de_Visita__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Canal</valueSetName>
    </valueSet>
</CustomField>