force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Codigo_de_duplicidad__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Codigo_de_duplicidad__c</fullName>
    <label>Codigo de duplicidad</label>
    <type>TextArea</type>
</CustomField>