force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Comentarios__c</fullName>
    <label>Comentarios</label>
    <type>TextArea</type>
</CustomField>