force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Domicilio_de_la_Visita__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Domicilio_de_la_Visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Domicilio al que se visito.</description>
    <label>Domicilio de la Visita</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institución, Farmacia, Consultorio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interacciones</relationshipLabel>
    <relationshipName>Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>