force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Efectividad__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Efectividad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Efectividad del APM relaciona a la interaccion.</description>
    <label>Efectividad</label>
    <referenceTo>Dan360_Efectividad__c</referenceTo>
    <relationshipLabel>Interacciones</relationshipLabel>
    <relationshipName>Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>