force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Fecha__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Fecha__c</fullName>
    <description>Dia y horario en que se realizo la interaccion.</description>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>