force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Motivo__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Motivo__c</fullName>
    <description>Motivo por el cual no se visito al profesional.</description>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profesional ausente</fullName>
            </value>
            <value>
                <fullName>Profesional sin tiempo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>