force-app/main/default/objects/Dan360_Interacciones__c/fields/VisMed_Tipo_de_Visita__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Tipo_de_Visita__c</fullName>
    <label>Tipo de Visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Visita</valueSetName>
    </valueSet>
</CustomField>