force-app/main/default/objects/Dan360_Interacciones__c/recordTypes/No_Visita.recordType-meta.xml
<RecordType>
    <fullName>No_Visita</fullName>
    <active>true</active>
    <label>No Visita</label>
</RecordType>