force-app/main/default/objects/Dan360_Interacciones__c/recordTypes/Tarea_de_Accion.recordType-meta.xml
<RecordType>
    <fullName>Tarea_de_Accion</fullName>
    <active>true</active>
    <label>Tarea de Accion</label>
</RecordType>