force-app/main/default/objects/Dan360_Interacciones__c/recordTypes/Visita_Medica.recordType-meta.xml
<RecordType>
    <fullName>Visita_Medica</fullName>
    <active>true</active>
    <label>Visita Médica</label>
</RecordType>