force-app/main/default/objects/Dan360_Interacciones__c/validationRules/No_se_puede_crear_un_Sabado_o_Domigo.validationRule-meta.xml
<ValidationRule>
    <fullName>No_se_puede_crear_un_Sabado_o_Domigo</fullName>
    <active>true</active>
    <description>Impide que se creen registros los dias sabado o domingos.</description>
    <errorConditionFormula>OR(MOD(VisMed_Fecha__c - DATE( 1900, 1, 7 ), 7 ) == 0, MOD(VisMed_Fecha__c - DATE( 1900, 1, 7 ), 7 ) == 6)</errorConditionFormula>
    <errorMessage>No se puede crear una interacción los dias Sabados o Domingos.</errorMessage>
</ValidationRule>