force-app/main/default/objects/Dan360_Interacciones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profesional__c</columns>
    <columns>VisMed_APM__c</columns>
    <columns>VisMed_Tipo_de_Visita__c</columns>
    <columns>VisMed_Fecha__c</columns>
    <columns>Estado__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Dan360_Interacciones__c.Visita_Medica</value>
    </filters>
    <label>All</label>
</ListView>