force-app/main/default/objects/Dan360_Interacciones__c/listViews/No_visitas_sin_aprobar.listView-meta.xml
<ListView>
    <fullName>No_visitas_sin_aprobar</fullName>
    <columns>NAME</columns>
    <columns>VisMed_APM__c</columns>
    <columns>VisMed_Tipo_de_Visita__c</columns>
    <columns>VisMed_Fecha__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Dan360_Interacciones__c.No_Visita</value>
    </filters>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Pendiente</value>
    </filters>
    <label>No visitas sin aprobar</label>
</ListView>